[tool.poetry]
name = "completor"
version = "0.0.1"
description = "Advanced mulit-segmented well completion tool."
authors = ["Equinor ASA"]
license = "LGPL-3.0"
readme = "README.md"
package-mode = true


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
pydantic = "^2.7.1"

rstcheck-core = {version="^1.2.1", optional=true}
ert = {version="^10.1.2", optional=true}
pyqt5-qt5 = {version="5.15.2", optional=true} # Pinned due to problems with OS spesific builds

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-xdist = "^3.6.1"
promise = "^2.3"
rstcheck-core = "^1.2.1"

[tool.poetry.extras]
ert = ["rstcheck-core", "ert", "pyqt5-qt5"]

[tool.poetry.scripts]
completor = "completor.main:main"

[project.entry-points."ert"]
run_completor = "completor.hook_implementations.jobs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
GitHub = "https://github.com/equinor/completor"
Issues = "https://github.com/equinor/completor/issues"
Documentation = "https://curly-broccoli-j5we2jp.pages.github.io/"

[tool.black]
line-length = 120
target-version = ['py310']
include='\.pyi?$'
extend-exclude = '''\.git |
            \.__pycache__|
            \.hg|
            \.mypy_cache|
            \.tox|
            \.venv|
            _build|
            buck-out|
            build|
            dist'''

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max_line_length="132"
ignore="E203, W503, E704"

[tool.pytest.ini_options]
markers = ["integration: mark a test as an integration test."]
