[tool.poetry]
name = "completor"
version = "1.1.2"
description = "Advanced multi-segmented well completion tool."
authors = ["Equinor ASA <opensource@equinor.com>"]
repository = "https://github.com/equinor/completor"
documentation = "https://equinor.github.io/completor"
license = "LGPL-3.0-only"
readme = "README.md"
package-mode = true
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/equinor/completor/issues"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3"
numpy = "<2" # Pinned below 2 because ert is still on numpy 1.
pandas = "^2"
scipy = "^1"
tqdm = "^4"

rstcheck-core = {version="^1", optional=true}
ert = {version="^12", optional=true}
pytest = {version="^8", optional=true}
pytest-xdist = {version="^3", optional=true}
pytest-env = {version="^1", optional=true}

[tool.poetry.group.dev.dependencies]
black = "^24"
flake8 = "^7"
pre-commit = "^4"
pytest = "^8"
pytest-xdist = "^3"
pytest-env = "^1"
rstcheck-core = "^1"

[tool.poetry.extras]
ert = ["ert"]
test = ["pytest", "pytest-xdist", "pytest-env", "rstcheck-core"]

[tool.poetry.scripts]
completor = "completor.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ert"]
run_completor = "completor.hook_implementations.jobs"

[tool.black]
line-length = 120
target-version = ['py310']
include='\.pyi?$'
extend-exclude = '''\.git |
            \.__pycache__|
            \.hg|
            \.mypy_cache|
            \.tox|
            \.venv|
            _build|
            buck-out|
            build|
            dist'''

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max_line_length="132"
ignore="E203, W503, E704"

[tool.pytest.ini_options]
markers = ["integration: mark a test as an integration test."]
env = ["TQDM_DISABLE=1"]
